--- a/2D Ising-GUI/test/MainWindow.axaml
+++ b/2D Ising-GUI/test/MainWindow.axaml
@@ -12,6 +12,7 @@
       <TextBox x:Name="tb_x" Text="256" Width="25" Height="12"></TextBox>
       <TextBox x:Name="tb_y" Text="128" Width="25" Height="12"></TextBox>
       <Button Click="OnButtonClick"> Start </Button>
+      <Button Click="OnButtonClick2">Multithreaded</Button>
      
       <StackPanel Width="500">
         <Label x:Name="label" HorizontalAlignment="Right"></Label>
