Linear parameter, own value B0, average magnet
-Added a parameter for the linear function
-Added an optional parameter for B0 that is not the start value of B(t)
-"Bugfix":Now the average magnetization gets compared with the analytical solution, not just the last value

--- a/2D Ising-GUI/test/MainWindow.axaml
+++ b/2D Ising-GUI/test/MainWindow.axaml
@@ -49,9 +49,10 @@
             <Label>Flips:</Label>
             <TextBox x:Name="tb_flips" Text="1" Width="50" Height="20"></TextBox>
           </StackPanel>
-          
+         
         </StackPanel>
-      
+        <Label>Temp:</Label>
+        <TextBox x:Name="tb_temp" Text="2,26" Width="50" Height="20"></TextBox>
       </StackPanel>
     
       
